revert #567 (update to java 21) and some minor adjustments