@@ -241,9 +241,7 @@ public class LeakedCollectionCheck extends IntegratedCheck {
 
         boolean foundPreviousAssignment = false;
         CtStatement currentStatement = ctVariableRead.getParent(CtStatement.class);
-        var reversedStatements = new ArrayList<>(StatementUtil.getEffectiveStatements(ctExecutable.getBody()));
-        Collections.reverse(reversedStatements);
-        for (CtStatement ctStatement : reversedStatements) {
+        for (CtStatement ctStatement : StatementUtil.getEffectiveStatements(ctExecutable.getBody()).reversed()) {
             if (!foundPreviousAssignment) {
                 if (ctStatement == currentStatement) {
                     foundPreviousAssignment = true;
@@ -282,7 +280,7 @@ public class LeakedCollectionCheck extends IntegratedCheck {
             List<CtExpression<?>> previousAssignees = findPreviousAssignee(ctVariableRead);
 
             if (!previousAssignees.isEmpty()) {
-                return findParameterReference(previousAssignees.get(0), ctExecutable);
+                return findParameterReference(previousAssignees.getFirst(), ctExecutable);
             }
 
             return Option.some((CtParameter<?>) ctVariableDeclaration);
@@ -445,11 +443,13 @@ public class LeakedCollectionCheck extends IntegratedCheck {
                         ctTypeMember = fixRecordAccessor(ctRecord, ctMethod);
                     }
 
-                    if (ctTypeMember instanceof CtConstructor<?> ctConstructor) {
-                        checkCtExecutableAssign(ctConstructor);
-                    } else if (ctTypeMember instanceof CtMethod<?> ctMethod) {
-                        checkCtExecutableReturn(ctMethod);
-                        checkCtExecutableAssign(ctMethod);
+                    switch (ctTypeMember) {
+                        case CtConstructor<?> ctConstructor -> checkCtExecutableAssign(ctConstructor);
+                        case CtMethod<?> ctMethod -> {
+                            checkCtExecutableReturn(ctMethod);
+                            checkCtExecutableAssign(ctMethod);
+                        }
+                        default -> {}
                     }
                 }
             }
